# machine-learning

./: .gitignore  README.md
codes/lib/: CMakeLists.txt
codes/lib/autograd/: CMakeLists.txt
codes/lib/autograd/src/: operators.cpp  value.cpp
codes/lib/include/autograd/: autograd.h  operators.h  value.h
codes/nlp/cbow/: Makefile  README.md  Test.ipynb
codes/nlp/cbow/model/: dictionary.txt  u.txt  v.txt
codes/nlp/cbow/src/: main.cpp  utils.cpp
codes/nlp/skip_gram/: README.md  Test.ipynb
codes/nlp/skip_gram/dataset/: train.txt
codes/nlp/skip_gram/model/: u.txt  v.txt
codes/nlp/skip_gram/src/: main.cpp  utils.cpp
codes/test/: CMakeLists.txt  run.sh
codes/test/src/: data.csv  main.cpp
